<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.tors42</groupId>
    <artifactId>charibot</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <packaging>jlink</packaging>

    <dependencies>
        <dependency>
            <groupId>io.github.tors42</groupId>
            <artifactId>chariot</artifactId>
            <version>0.0.71</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.1.0</version>
                <extensions>true</extensions>
                <configuration>
                    <launcher>bot=charibot/bot.Main</launcher>
                    <addOptions>
                        <addOption>--enable-preview</addOption>
                    </addOptions>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <!--<stripDebug>true</stripDebug>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <compilerArg>--enable-preview</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
